# trip-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  langgraph.json  pyproject.toml  server.py
.github/workflows/: ci.yml  claude.yml
agent/: __init__.py  graph.py  llm.py  state.py  tracing.py
agent/tools/: __init__.py  booking.py  calendar.py  traffic.py  vivo.py  weather.py
prompts/: agents_zh.py  travel_planner_zh.py
tests/: conftest.py  test_persistence.py  test_tools.py
