[project]
name = "trip-agent"
version = "0.1.0"
description = "觅途 trip-planning agent — a 1+N LangGraph multi-agent on vivo 蓝心大模型"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.5",
    "langchain-openai>=1.3.2",
    "langchain-core>=1.4.7",
    "langsmith>=0.8.15",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

# Optional HTTP server (FastAPI) — install with `--extra server` to run server.py.
# Pure-package / LangGraph-Platform users don't need these.
[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.29",
    "pytest>=8.0",
]

# Make this repo pip-installable as a package (so other projects can
# `pip install git+...` or add it as a submodule and `from agent.graph import graph`).
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "agent.tools", "prompts"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: hits the live vivo API (needs VIVO_API_KEY)",
]
